--- a/portifolio1.html
+++ b/portifolio1.html
@@ -41,15 +41,14 @@
         padding: 20px;
       }
 
-      footer {
-        position: fixed;
-        bottom: 0;
-        width: 100%;
-        background-color: #333;
-        color: #fff;
-        padding: 10px 0;
-        text-align: center;
-      }
+       footer {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            background-color: black;
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
     </style>
   </head>
   <body>
